Sun Dec 26 11:39:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt): missing ripper rule.  i.e., `a::B ||= c 1'.
	  http://twitter.com/#!/wannabe53/status/18797576396472321
	  http://twitter.com/#!/wannabe53/status/18798416150663168

Sun Dec 26 04:31:15 2010  Luis Lavena  <luislavena@gmail.com>

	* ext/dl/win32/registry.rb: Corrected RegCreateKeyExA signature.
	  Patch by Rafal Michalski [ruby-core:33874] [Ruby 1.9-Bug#4203]

Sat Dec 25 15:04:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/csv/test_encodings.rb (TestEncodings#setup): fix evil test
	  suite writing to the source directory.

Sat Dec 25 14:27:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_extract_encoding_option): accept Encoding object as
	  encoding: optional argument.  [ruby-dev:42884]

Sat Dec 25 15:08:08 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/pty/pty.c (chfunc): Added rb_thread_atfork_before_exec().
	  We must reinitialize GVL at new process creation. Otherwise
	  we may meet an insane deadlock. [Bug#4121][ruby-dev:42686]

Wed Sep  8 22:46:31 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ssl_get_error): Thread context switch was
	  blocked on Windows while blocking call for SSLSocket.  Need to
	  convert errno for letting rb_io_wait_readable detect EWOULDBLOCK.
	  Patch by arton. ref #3794.

Thu Dec 23 23:29:04 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk, win32/Makefile.sub: fixes dependencies.
	  patch by nobu.

Thu Dec 23 22:29:08 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* io.c (io_fillbuf): fixes a mistake on merging r30280, at r30321.

Thu Dec 23 06:35:41 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/net/smtp.rb: Net::SMTP should close the SSL connection if the
	  connection verification fails.

Tue Dec 21 06:25:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rexml/test_contrib.rb (ContribTester#test_pos): should not