@@ -7,7 +7,7 @@
 
 VALUE rb_cDLHandle;
 
-#ifdef HAVE_WINDOWS_H
+#ifdef _WIN32
 # ifndef _WIN32_WCE
 static void *
 w32_coredll(void)
@@ -142,7 +142,7 @@ rb_dlhandle_initialize(int argc, VALUE argv[], VALUE self)
 
     rb_secure(2);
 
-#if defined(HAVE_WINDOWS_H)
+#if defined(_WIN32)
     if( !clib ){
 	HANDLE rb_libruby_handle(void);
 	ptr = rb_libruby_handle();
