@@ -16,4 +16,14 @@ class TestFiddle < Fiddle::TestCase
       assert_equal(DL.const_get(name), Fiddle.const_get(name))
     end
   end
+
+  def test_windows_constant
+    require 'rbconfig'
+    if RbConfig::CONFIG['host_os'] =~ /mswin|mingw/
+      assert Fiddle::WINDOWS, "Fiddle::WINDOWS should be 'true' on Windows platforms"
+    else
+      refute Fiddle::WINDOWS, "Fiddle::WINDOWS should be 'false' on non-Windows platforms"
+    end
+  end
+
 end
