@@ -1,3 +1,13 @@
+Wed Jan  5 12:10:08 2011  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* Use _WIN32 rather than checking for windows.h.  Thanks Jon Forums!
+	  [ruby-core:33977]
+
+Tue Dec 28 04:32:37 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/fiddle/extconf.rb: check for windows.h while building fiddle.
+	  Thanks Jon Forums! [ruby-core:33923]
+
 Sun Dec 26 11:39:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (stmt): missing ripper rule.  i.e., `a::B ||= c 1'.
